--- a/test-reports/report_app.html
+++ b/test-reports/report_app.html
@@ -23,77 +23,9 @@
             <th>Evidence</th>
             <th>Reason</th>
         </tr>
-        <tr><td colspan="5"><b>app/app.js</b></td></tr><tr class="warning">
-    <td class="text-center">W106</td>
-    <td class="text-center">5</td>
-    <td class="text-center">28</td>
-    <td><code>    var has_Perfect_Numbers &#61; false;</code></td>
-    <td>Identifier &#39;has_Perfect_Numbers&#39; is not in camel case.</td>
-</tr><tr class="warning">
-    <td class="text-center">W116</td>
-    <td class="text-center">9</td>
-    <td class="text-center">33</td>
-    <td><code>        if&#40;&#40;typeof numbers&#91;i&#93; &#61;&#61; &#39;number&#39;&#41; &amp;&amp; &#40;numbers&#91;i&#93; &gt; 0&#41;&#41;&#123;</code></td>
-    <td>Expected &#39;&#61;&#61;&#61;&#39; and instead saw &#39;&#61;&#61;&#39;.</td>
-</tr><tr class="warning">
-    <td class="text-center">W106</td>
-    <td class="text-center">11</td>
-    <td class="text-center">36</td>
-    <td><code>                has_Perfect_Numbers &#61; true;</code></td>
-    <td>Identifier &#39;has_Perfect_Numbers&#39; is not in camel case.</td>
-</tr><tr class="warning">
-    <td class="text-center">W106</td>
-    <td class="text-center">20</td>
-    <td class="text-center">27</td>
-    <td><code>    if&#40;has_Perfect_Numbers&#41;&#123;</code></td>
-    <td>Identifier &#39;has_Perfect_Numbers&#39; is not in camel case.</td>
-</tr><tr class="warning">
-    <td class="text-center">W106</td>
-    <td class="text-center">23</td>
-    <td class="text-center">36</td>
-    <td><code>        return &#123;has_Perfect_Numbers: has_Perfect_Numbers&#44; biggest: biggest&#44;</code></td>
-    <td>Identifier &#39;has_Perfect_Numbers&#39; is not in camel case.</td>
-</tr><tr class="warning">
-    <td class="text-center">W106</td>
-    <td class="text-center">23</td>
-    <td class="text-center">57</td>
-    <td><code>        return &#123;has_Perfect_Numbers: has_Perfect_Numbers&#44; biggest: biggest&#44;</code></td>
-    <td>Identifier &#39;has_Perfect_Numbers&#39; is not in camel case.</td>
-</tr><tr class="warning">
-    <td class="text-center">W106</td>
-    <td class="text-center">26</td>
-    <td class="text-center">36</td>
-    <td><code>        return &#123;has_Perfect_Numbers: has_Perfect_Numbers&#44; biggest: null&#44;</code></td>
-    <td>Identifier &#39;has_Perfect_Numbers&#39; is not in camel case.</td>
-</tr><tr class="warning">
-    <td class="text-center">W106</td>
-    <td class="text-center">26</td>
-    <td class="text-center">57</td>
-    <td><code>        return &#123;has_Perfect_Numbers: has_Perfect_Numbers&#44; biggest: null&#44;</code></td>
-    <td>Identifier &#39;has_Perfect_Numbers&#39; is not in camel case.</td>
-</tr><tr class="warning">
-    <td class="text-center">W003</td>
-    <td class="text-center">31</td>
-    <td class="text-center">10</td>
-    <td><code>function isPerfectNumber&#40;number&#41;&#123;</code></td>
-    <td>&#39;isPerfectNumber&#39; was used before it was defined.</td>
-</tr><tr class="warning">
-    <td class="text-center">W116</td>
-    <td class="text-center">35</td>
-    <td class="text-center">28</td>
-    <td><code>        if &#40;&#40;number &#37; i&#41; &#61;&#61; 0&#41;&#123;</code></td>
-    <td>Expected &#39;&#61;&#61;&#61;&#39; and instead saw &#39;&#61;&#61;&#39;.</td>
-</tr><tr class="warning">
-    <td class="text-center">W116</td>
-    <td class="text-center">39</td>
-    <td class="text-center">22</td>
-    <td><code>    return &#40;number &#61;&#61; sum&#41;;</code></td>
-    <td>Expected &#39;&#61;&#61;&#61;&#39; and instead saw &#39;&#61;&#61;&#39;.</td>
-</tr>
+        <tr><td colspan="5" class="text-center" style="padding: 25px 0;">Congratulations! No errors.</td></tr>
     </table>
-    <div class="well">
-    Found <span class="label label-default">11</span> failures - <span class="label label-danger">0 errors</span> &amp; <span class="label label-warning">11 warnings</span>
-</div>
+    
 </div>
 
 </body>
